--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,8 +1,12 @@
-.nav {
+.sidebar {
   padding: 20px;
   grid-area: n;
 
   background-color: indianred;
+}
+
+.item+.item {
+  margin-top: 10px;
 }
 
 .item a {
