--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -4,14 +4,31 @@
   grid-template-columns: 3fr 10fr;
 }
 
-.messages_list {
+.messages{
   width: 300px;
+}
+
+.messages_list {
+  margin-bottom: 20px;
+}
+
+.messages_form {
+  display: flex;
+  flex-direction: column;
+}
+
+.messages_textarea {
+  height: 100px;
+  margin-bottom: 10px;
+  padding: 10px;
+
+  border-radius: 10px;
 }
 
 .messages_item {
   display: flex;
   padding: 10px 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: rgb(67, 67, 126);
   width: fit-content;
 
