--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,76 @@
 
   background-color: khaki;
 }
+
+.title {
+  color: green;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+
+/* users start */
+.users_item {
+  display: inline-flex;
+  margin-bottom: 20px;
+  padding: 10px;
+
+  border: 1px solid green;
+  border-radius: 5px;
+}
+
+.users_item:last-child {
+  margin-bottom: 0;
+}
+
+.users_item_photo {
+  width: 150px;
+  height: 150px;
+
+  margin-bottom: 10px;
+}
+
+.users_item_photo_img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
+.users_item_col.v1_mod {
+  margin-right: 20px;
+}
+
+.users_follow_btn {
+  width: 100%;
+}
+
+.users_item_info {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+
+  color: gray;
+}
+
+.users_item_name {
+  margin-bottom: 10px;
+
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.users_item_location {
+  margin-bottom: 20px;
+
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.users_item_status {
+  margin-top: auto;
+  font-size: 25px;
+}
+
+/* users end */
